<resources>
    <string name="app_name">Grocery Helper</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipes">Recipes</string>
    <string name="notfound">Not Found</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="menu_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_basket">Add Basket</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="search_hint">Search for ingredient or recipe</string>
    <string name="search_hint_recipe_name">Insert recipe name</string>
    <string name="search_hint_basket_name">Insert basket name</string>
    <string name="search_hint_ingredient_name">Insert ingredient name</string>
    <string name="auth_failed">Registeration failed</string>


    // Menu titles
    <string name="nav_home">Home</string>
    <string name="nav_account">My Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    // Registering/loging texts
    <string name="sign_in_or_register">Sign in or register</string>
    <string name="user_email_logged_out">Logged out </string>
    <string name="account_created">Account Created: </string>
    <string name="insert_email_and_password">Insert email and password</string>

    // My account fragment

    <string name="my_account">My Account</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="logged_in_as">Logged in as </string>
    <string name="log_out">Log out</string>

    // Login/signup hints
    <string name="email_hint">Example@example.com</string>
    <string name="password_hint">password</string>

    //ActionBarToggle accessibility string
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

</resources>
